# Aegis

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  Troubleshooting.md  architecture_diagram.md  docker-compose.yml
.agents/skills/my-skill/: SKILL.md
agent/: README.md  pyproject.toml
agent/aegis_ops/: __init__.py  actuator.py  auditor.py  config.py  gateway_client.py  main.py  models.py  observer.py  policy.py  prompts.py  reasoner.py  splunk_client.py  splunk_mcp_client.py  transports.py
agent/configs/: aegis-ops.example.toml
agent/tests/: test_observer.py  test_policy.py  test_reasoner.py
apps/aegis_ai/: README.md  appinspect-report.json
apps/aegis_ai/default/: alert_actions.conf  app.conf  commands.conf  inputs.conf  savedsearches.conf
configs/: aegis.demo.toml  aegis.docker.toml  aegis.eu-west.demo.toml  aegis.eu-west.example.toml  aegis.example.toml  aegis.recording.toml  aegis.us-east.demo.toml  aegis.us-east.example.toml
dashboards/: README.md  aegis.json
demo/: command_override.json  command_override_demo.json  log_spammer.py  mcp_smoke_body.json  run-multi-edge.ps1
docker/: supervisord.conf
docs/: aitk-ollama.md  architecture.md  causal-chain.md  cdtsm-forecast.md  decision-card.md  finops-math.md  mcp.md  memory.md  saia-integration.md  splunk-blocker.md
gateway/aegis-core/: Cargo.toml
gateway/aegis-core/src/: causal.rs  config.rs  control.rs  decision.rs  dedup.rs  event.rs  hec.rs  hec_sink.rs  id.rs  incident_memory.rs  ingest.rs  lib.rs  pipeline.rs  queue.rs  self_metrics.rs  service.rs  service_catalog.rs  sidecar.rs  signature.rs  silence.rs  sink.rs  summary.rs
gateway/aegis-daemon/: Cargo.toml
gateway/aegis-daemon/src/: main.rs
gateway/aegis-mcp/: Cargo.toml
gateway/aegis-mcp/src/: lib.rs
microservice/: README.md  otel-collector-config.yaml  pyproject.toml  requirements.txt
microservice/workload/: __init__.py  __main__.py  config.py  fleet.py  gateway_sink.py  server.py  simulator.py  telemetry.py
microservice/workload/static/: app.js  index.html  styles.css
sidecar/: README.md  pyproject.toml
sidecar/aegis_sidecar/: __init__.py  classifier.py  clustering.py  embeddings.py  hosted_model.py  server.py  splunk_ai.py
sidecar/tests/: test_classifier.py  test_hosted_model.py  test_splunk_ai.py
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: ActivityLog.tsx  CommandConsole.tsx  DecisionCardPanel.tsx  IncidentMemoryPanel.tsx  NetworkPanel.tsx  StatusBanner.tsx  StatusTiles.tsx  ToolsPanel.tsx
