[workspace]
resolver = "2"
members = [
    "gateway/aegis-core",
    "gateway/aegis-mcp",
    "gateway/aegis-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Aegis Contributors"]
repository = "https://github.com/your-org/aegis"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
blake3 = "1"
regex = "1"
once_cell = "1"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }

# MCP server SDK (official Rust SDK)
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
schemars = "0.8"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Workspace-local crates
aegis-core = { path = "gateway/aegis-core" }
aegis-mcp = { path = "gateway/aegis-mcp" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
