[project]
name = "aegis-ops-agent"
version = "0.1.0"
description = "Autonomous AI agent that observes Aegis edge gateways + Splunk, reasons with Splunk Hosted Models, and decides which Aegis tools to call."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aegis Contributors" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
    "typer>=0.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
aegis-ops = "aegis_ops.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis_ops"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
