[project]
name = "aegis-workload"
version = "0.1.0"
description = "Self-driving telemetry microservice: a simulated service fleet that emits OpenTelemetry logs/metrics/traces and streams raw logs into the Aegis gateway."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aegis Contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
]

[project.scripts]
aegis-workload = "workload.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workload"]

[tool.ruff]
line-length = 110
target-version = "py311"
