[project]
name = "aegis-sidecar"
version = "0.1.0"
description = "Aegis Python AI sidecar: embeddings, semantic clustering, Splunk Hosted Model adapter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aegis Contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.27",
    "numpy>=2.1",
    "scikit-learn>=1.5",
    "sentence-transformers>=3.3",
]

[project.optional-dependencies]
hosted = [
    "huggingface-hub>=0.26",
]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[project.scripts]
aegis-sidecar = "aegis_sidecar.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis_sidecar"]

[tool.ruff]
line-length = 100
target-version = "py311"
