[package]
name = "aegis-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Aegis daemon: runs the ingest pipeline and the MCP control server in a single process."

[[bin]]
name = "aegis-daemon"
path = "src/main.rs"

[dependencies]
aegis-core.workspace = true
aegis-mcp.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
